# haskell-template-project

./: .ghci  .gitignore  .travis.yml  Changelog.md  LICENSE  Readme.md  default.nix  flake.nix  makefile  package.yaml  shell.nix  stack-lts-17.yaml  stack-lts-19.yaml  stack-lts-20.yaml  stack-nightly.yaml  template.cabal
.github/workflows/: bump.yaml  cabal.yaml  ci.yaml  nightly.yaml  nix.yaml  stack.yaml  test.yml
app/: Main.hs  exe.hs
nix/: bundle.nix  ci.nix  hpack-shell.nix  hpkgs.nix  pin.nix  pkgs.nix  travis-shell.nix
npins/: sources.json
src/: Interact.hs  Lib.hs  Main.hs  OptParse.hs  Template.hs  TicTacToe.hs  XXX.hs  XXXInternal.hs
test/: Main.hs
test/Test/: TestSpec.hs
